--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,7 @@ charset = utf-8
 indent_style = tab
 indent_size = 2
 trim_trailing_whitespace = true
+[*.less]
+charset = utf-8
+indent_style = tab
+indent_size = 2
