--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "dotenv": "^1.2.0",
+    "entipic.url": "0.0.4",
     "express": "^4.13.3",
     "i18n": "^0.5.0",
     "jade": "^1.11.0",
