--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openpeaks-website",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Openpeaks website",
   "main": "./lib/app.js",
   "scripts": {
@@ -33,6 +33,8 @@
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
+    "openpeaks-articles-storage": "^0.1.0",
+    "openpeaks-data": "^0.1.0",
     "response-time": "^2.3.1",
     "urlset": "^0.4.2"
   },
