--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "entipic.url": "0.0.4",
     "express": "^4.13.3",
     "i18n": "^0.5.0",
+    "intl": "^1.0.1",
     "jade": "^1.11.0",
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
